# lang-srs

./: .glottologid.txt  AUTHORS  CITATION.cff  Links.md  Makefile.in  README  README.markdown  README.md  TsuutinaDocumentation.jspwiki  adjectives-affixes-fst-src.md  adjectives-stems-fst-src.md  autogen.sh  configure.ac  functions-cg3-src.md  giella-srs.pc.in  index-header.md  index.md  language-map.md  lemmacount.json  manifest.toml  manifest.toml.in  maturity.json  nouns-affixes-fst-src.md  nouns-stems-fst-src.md  nouns-stems.jspwiki  numerals-stems-fst-src.md  phonology-morphology.md  prefixes-stems-fst-src.md  pronouns-stems-fst-src.md  propernouns-affixes-fst-src.md  root-fst-src.md  src-cg3-functions.cg3.md  src-fst-affixes-nouns.lexc.md  src-fst-affixes-propernouns.lexc.md  src-fst-affixes-symbols.lexc.md  src-fst-affixes-verbs.lexc.md  src-fst-morphology-affixes-propernouns.lexc.md  src-fst-morphology-affixes-symbols.lexc.md  src-fst-morphology-affixes-verbs.lexc.md  src-fst-morphology-root.lexc.md  (+27 more)
.github/workflows/: spellers.yml
.gut/: delta.toml  manifest.toml
am-shared/: src_dictionary-include.am  src_dictionary-include.am.rej
devtools/: harvest_flags.py  test_ospell-office_suggestions.sh  test_voikkospell_suggestions.sh
doc/: Links.jspwiki  Makefile.am  TsuutinaDocumentation.jspwiki  WhatIsThis.jspwiki  index.xml  link-header.jspwiki  nouns-affixes.jspwiki  nouns-stems.jspwiki  preamble.jspwiki  root-morphology.jspwiki  srs-phon-phonology.jspwiki  srs.jspwiki  tabs.xml  verbs-affixes.jspwiki  verbs-stems.jspwiki
docs/: Makefile.am  WhatIsThis.jspwiki  _config.yml  index-header.md  index.xml  language-map.md  nouns-affixes.jspwiki  root-morphology.jspwiki  site.xml  srs.jspwiki  verbs-affixes.jspwiki  verbs-stems.jspwiki
docs/typosreport/: report.json
inc/: analyze-tvpd-english-translations-as-cree.sh  create-lexc-or-db-from-analyzed-tvpd.sh  guesstest.foma  guesstest.lexc  spelling_words_list.lexc  srs-test.importjson  verb_inner_affixes.lexc  verb_middle_affixes.lexc  verb_outer_affixes.lexc  verbaffixes.lexc  verbstems.lexc  verbtags.lexc  verbtest.foma
inc/gunaha/: VE.tsv  VIm.tsv  eng2crk2srs.xfscript  srs-test.importjson  srs.altlabel.tsv  srs2crk2eng-verbs.xfscript
m4/: giella-config-files.m4
src/: Makefile.am
src/cg3/: functions.cg3
src/filters/: Makefile.am  allow_uppercase.regex  remove-bracketed-english-gloss.regex
src/fst/: .gitignore  Makefile.am  phonology.twolc  phonology.twolc.old  phonology.xfscript  root.lexc  srs-bound-demo.xfscript  srs-verb.xfscript  srs-verbs.xfscript  verb_lexicon.xfscript.in
src/fst/affixes/: noun_affixes.lexc  nouns.lexc  postverbal_affixes.lexc  verb_inner_affixes.lexc  verb_middle_affixes.lexc  verb_oblique_affixes.lexc  verb_outer_affixes.lexc  verb_tags.lexc  verbtags.lexc
src/fst/filters/: Makefile.am  allow_uppercase.regex
src/fst/incoming/: harvest_flags.py  pairs_to_yaml.py  srs-phon.xfscript  verb_inner_affixes.lexc  verb_middle_affixes.lexc  verb_outer_affixes.lexc  verb_stems.lexc  verb_tama_classes.lexc  verbstems.lexc  verbtags.lexc  verbtest.foma
src/fst/morphology/: Makefile.am  phonology.xfscript  root.lexc  srs-verbs.xfscript  verb_lexicon.xfscript.in
src/fst/morphology/affixes/: postverbal_affixes.lexc  symbols.lexc  verb_inner_affixes.lexc  verb_middle_affixes.lexc  verb_oblique_affixes.lexc  verb_outer_affixes.lexc  verb_tags.lexc  verbs.lexc
src/fst/morphology/incoming/: srs-bound-demo.xfscript  verb_middle_affixes.lexc  verb_stems.lexc  verb_tama_classes.lexc  verbtest.foma
src/fst/morphology/stems/: pronouns.lexc
src/fst/morphology/test/: Makefile.am  generate-adjective-lemmas.sh.in
src/fst/morphology/test/phonology/: Makefile.am
src/fst/orthography/: spellrelax.regex
src/fst/stems/: adjectives.lexc  noun_stems.lexc  nouns.lexc  numerals.lexc  prefixes.lexc  verb_stems.lexc  verbs.lexc  verbstems.lexc  words.lexc
src/fst/test/gt-norm-yamls/: V-INTR-IPFV-0-didus_crawl_gt-norm.yaml  V-INTR-IPFV-0i-nagudiitlod_jump-down_gt-norm.yaml  V-INTR-IPFV-ni-tsazid_wake-up_gt-norm.yaml  V-INTR-IPFV_REP-0-itsiy_cry_gt-norm.yaml  V-INTR-IPFV_REP-0i-tsidiitla_run-away_gt-norm.yaml  V-INTR-PFV-ni-tsazid_wake-up_gt-norm.yaml  V-INTR-PFV-sii-tsidiitla_run-away_gt-norm.yaml  V-INTR-POT-yii-tsidiitla_run-away_gt-norm.yaml  V-INTR-PROG-yi-tsazid_wake-up_gt-norm.yaml  V-INTR-PROG-yii-nagudiitlod_jump-down_gt-norm.yaml  V-INTR-PROG-yii-tsidiitla_run-away_gt-norm.yaml
src/fst/transcriptions/: transcriptor-symbols2text.lexc
src/morphology/: Makefile.am  root.lexc  verb_lexicon.xfscript.in
src/morphology/affixes/: adjectives.lexc  nouns.lexc  propernouns.lexc  verb_inner_affixes.lexc  verbs.lexc
src/morphology/incoming/: README  srs-phon.xfscript  verb_inner_affixes.lexc  verb_middle_affixes.lexc  verb_oblique_affixes.lexc  verb_outer_affixes.lexc  verbstems.lexc  verbtags.lexc  verbtest.foma  words.lexc
src/morphology/stems/: adjectives.lexc  nouns.lexc  numerals.lexc  prefixes.lexc  pronouns.lexc  punctuation.lexc  verbs.lexc  verbstems.lexc
src/orthography/: convert-plain-to-macron-vowels.xfscript  spellrelax-mobile-keyboard.regex  spellrelax.regex
src/phonology/: srs-phon.twolc
src/transcriptions/: transcriptor-abbrevs2text.lexc  transcriptor-clock-digit2text.lexc  transcriptor-date-digit2text.lexc
techdoc/lang/: srs
test/tools/: Makefile.am
tools/: Makefile.am
tools/analysers/: pipeline.ts
tools/grammarcheckers/: errors-srs.ftl  grammarchecker.cg3  index.xml  pipeline.ts  pipespec.xml  pipespec.xml.in
tools/shellscripts/: Makefile.am  flag-diacritic-declaration-check.sh  onespot-sapir2lexc.sh  pairs2lexc.sh  show-gloss-to-lemma-stats.sh  show-lemma-to-stem-stats.sh  validate-onespot-sapir-entries.sh
tools/spellcheckers/: Makefile.mod-desktop-hfst.am  Makefile.mod-desktop.am  Makefile.mod-mobile-hfst.am  editdist.default.txt  index.xml  strings.default.regex  strings.default.txt
tools/tokenisers/: tokeniser-disamb-gt-desc.pmscript  tokeniser-gramcheck-gt-desc.pmscript
tools/tts/: acro2text.regex  pipeline.ts  text2phontext.regex
(+47 files in other folders)
