## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# List all md files that should be created from source files in the
# MD_PAGES variable. The filename pattern is as follows:
#
# dir/filename.lexc => filename-dir.md

MD_PAGES=root-morphology.md \
nouns-stems.md              \
verbs-stems.md              \
nouns-affixes.md            \
verbs-affixes.md \
phonology-morphology.md
# clitics-morphology.md       \
# compounding-morphology.md   \
# abbreviations-stems.md      \
# acronyms-stems.md           \
# adjectives-stems.md         \
# adpositions-stems.md        \
# adverbs-stems.md            \
# conjunctions-stems.md       \
# interjections-stems.md      \
# numerals-stems.md           \
# particles-stems.md          \
# pronouns-stems.md           \
# propernouns-stems.md        \
# punctuation-stems.md        \
# smi-propernouns-stems.md    \
# subjunctions-stems.md       \
# adjectives-oahpa-affixes.md \
# adjectives-affixes.md       \
# propernouns-affixes.md

include $(top_srcdir)/../giella-core/am-shared/docs-dir-include.am
